parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> block_list
Rule 1     block_list -> statement
Rule 2     block_list -> block_list statement
Rule 3     block_list -> statementwithmod
Rule 4     block_list -> block_list statementwithmod
Rule 5     render_action -> render LPAREN keywordargument_list RPAREN OBRACE block_list EBRACE
Rule 6     group_action1 -> group LPAREN RPAREN OBRACE block_list EBRACE
Rule 7     group_action2 -> group LPAREN RPAREN SEMICOL
Rule 8     boolean -> true
Rule 9     boolean -> false
Rule 10    stripped_string -> STRING
Rule 11    statement -> part
Rule 12    statement -> operation
Rule 13    statement -> multmatrix_action
Rule 14    statement -> group_action1
Rule 15    statement -> group_action2
Rule 16    statement -> color_action
Rule 17    statement -> render_action
Rule 18    statement -> not_supported
Rule 19    anymodifier -> MODIFIERBACK
Rule 20    anymodifier -> MODIFIERDEBUG
Rule 21    anymodifier -> MODIFIERROOT
Rule 22    anymodifier -> MODIFIERDISABLE
Rule 23    statementwithmod -> anymodifier statement
Rule 24    part -> sphere_action
Rule 25    part -> cylinder_action
Rule 26    part -> cube_action
Rule 27    part -> circle_action
Rule 28    part -> square_action
Rule 29    part -> text_action
Rule 30    part -> polygon_action_nopath
Rule 31    part -> polygon_action_plus_path
Rule 32    part -> polyhedron_action
Rule 33    2d_point -> OSQUARE NUMBER COMMA NUMBER ESQUARE
Rule 34    points_list_2d -> 2d_point COMMA
Rule 35    points_list_2d -> points_list_2d 2d_point COMMA
Rule 36    points_list_2d -> points_list_2d 2d_point
Rule 37    3d_point -> OSQUARE NUMBER COMMA NUMBER COMMA NUMBER ESQUARE
Rule 38    points_list_3d -> 3d_point COMMA
Rule 39    points_list_3d -> points_list_3d 3d_point COMMA
Rule 40    points_list_3d -> points_list_3d 3d_point
Rule 41    path_points -> NUMBER COMMA
Rule 42    path_points -> path_points NUMBER COMMA
Rule 43    path_points -> path_points NUMBER
Rule 44    path_list -> OSQUARE path_points ESQUARE
Rule 45    path_set -> path_list
Rule 46    path_set -> path_set COMMA path_list
Rule 47    operation -> difference_action
Rule 48    operation -> intersection_action
Rule 49    operation -> union_action
Rule 50    operation -> rotate_extrude_action
Rule 51    operation -> linear_extrude_with_transform
Rule 52    operation -> rotate_extrude_file
Rule 53    operation -> import_file1
Rule 54    operation -> surface_action
Rule 55    operation -> projection_action
Rule 56    operation -> hull_action
Rule 57    operation -> minkowski_action
Rule 58    operation -> offset_action
Rule 59    operation -> resize_action
Rule 60    offset_action -> offset LPAREN keywordargument_list RPAREN OBRACE block_list EBRACE
Rule 61    hull_action -> hull LPAREN RPAREN OBRACE block_list EBRACE
Rule 62    minkowski_action -> minkowski LPAREN keywordargument_list RPAREN OBRACE block_list EBRACE
Rule 63    resize_action -> resize LPAREN keywordargument_list RPAREN OBRACE block_list EBRACE
Rule 64    not_supported -> glide LPAREN keywordargument_list RPAREN OBRACE block_list EBRACE
Rule 65    not_supported -> subdiv LPAREN keywordargument_list RPAREN OBRACE block_list EBRACE
Rule 66    size_vector -> OSQUARE NUMBER COMMA NUMBER COMMA NUMBER ESQUARE
Rule 67    keywordargument -> ID EQ boolean
Rule 68    keywordargument -> ID EQ NUMBER
Rule 69    keywordargument -> ID EQ size_vector
Rule 70    keywordargument -> ID EQ vector
Rule 71    keywordargument -> ID EQ 2d_point
Rule 72    keywordargument -> text EQ stripped_string
Rule 73    keywordargument -> ID EQ stripped_string
Rule 74    keywordargument_list -> keywordargument
Rule 75    keywordargument_list -> keywordargument_list COMMA keywordargument
Rule 76    color_action -> color LPAREN vector RPAREN
Rule 77    union_action -> union LPAREN RPAREN OBRACE block_list EBRACE
Rule 78    difference_action -> difference LPAREN RPAREN OBRACE block_list EBRACE
Rule 79    intersection_action -> intersection LPAREN RPAREN OBRACE block_list EBRACE
Rule 80    rotate_extrude_action -> rotate_extrude LPAREN keywordargument_list RPAREN OBRACE block_list EBRACE
Rule 81    rotate_extrude_file -> rotate_extrude LPAREN keywordargument_list RPAREN SEMICOL
Rule 82    linear_extrude_with_transform -> linear_extrude LPAREN keywordargument_list RPAREN OBRACE block_list EBRACE
Rule 83    import_file1 -> import LPAREN keywordargument_list RPAREN SEMICOL
Rule 84    surface_action -> surface LPAREN keywordargument_list RPAREN SEMICOL
Rule 85    multmatrix_action -> multmatrix LPAREN matrix RPAREN OBRACE block_list EBRACE
Rule 86    multmatrix_action -> multmatrix LPAREN matrix RPAREN statement
Rule 87    matrix -> OSQUARE vector COMMA vector COMMA vector COMMA vector ESQUARE
Rule 88    vector -> OSQUARE NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER ESQUARE
Rule 89    sphere_action -> sphere LPAREN keywordargument_list RPAREN SEMICOL
Rule 90    cylinder_action -> cylinder LPAREN keywordargument_list RPAREN SEMICOL
Rule 91    cube_action -> cube LPAREN keywordargument_list RPAREN SEMICOL
Rule 92    circle_action -> circle LPAREN keywordargument_list RPAREN SEMICOL
Rule 93    square_action -> square LPAREN keywordargument_list RPAREN SEMICOL
Rule 94    text_action -> text LPAREN keywordargument_list RPAREN SEMICOL
Rule 95    polygon_action_nopath -> polygon LPAREN points EQ OSQUARE points_list_2d ESQUARE COMMA paths EQ undef COMMA keywordargument_list RPAREN SEMICOL
Rule 96    polygon_action_plus_path -> polygon LPAREN points EQ OSQUARE points_list_2d ESQUARE COMMA paths EQ OSQUARE path_set ESQUARE COMMA keywordargument_list RPAREN SEMICOL
Rule 97    polyhedron_action -> polyhedron LPAREN points EQ OSQUARE points_list_3d ESQUARE COMMA faces EQ OSQUARE path_set ESQUARE COMMA keywordargument_list RPAREN SEMICOL
Rule 98    polyhedron_action -> polyhedron LPAREN points EQ OSQUARE points_list_3d ESQUARE COMMA triangles EQ OSQUARE points_list_3d ESQUARE COMMA keywordargument_list RPAREN SEMICOL
Rule 99    projection_action -> projection LPAREN keywordargument_list RPAREN OBRACE block_list EBRACE

Terminals, with rules where they appear

COMMA                : 33 34 35 37 37 38 39 41 42 46 66 66 75 87 87 87 88 88 88 95 95 96 96 97 97 98 98
EBRACE               : 5 6 60 61 62 63 64 65 77 78 79 80 82 85 99
EQ                   : 67 68 69 70 71 72 73 95 95 96 96 97 97 98 98
ESQUARE              : 33 37 44 66 87 88 95 96 96 97 97 98 98
ID                   : 67 68 69 70 71 73
LPAREN               : 5 6 7 60 61 62 63 64 65 76 77 78 79 80 81 82 83 84 85 86 89 90 91 92 93 94 95 96 97 98 99
MODIFIERBACK         : 19
MODIFIERDEBUG        : 20
MODIFIERDISABLE      : 22
MODIFIERROOT         : 21
NUMBER               : 33 33 37 37 37 41 42 43 66 66 66 68 88 88 88 88
OBRACE               : 5 6 60 61 62 63 64 65 77 78 79 80 82 85 99
OSQUARE              : 33 37 44 66 87 88 95 96 96 97 97 98 98
RPAREN               : 5 6 7 60 61 62 63 64 65 76 77 78 79 80 81 82 83 84 85 86 89 90 91 92 93 94 95 96 97 98 99
SEMICOL              : 7 81 83 84 89 90 91 92 93 94 95 96 97 98
STRING               : 10
circle               : 92
color                : 76
cube                 : 91
cylinder             : 90
difference           : 78
error                : 
faces                : 97
false                : 9
glide                : 64
group                : 6 7
hull                 : 61
import               : 83
intersection         : 79
linear_extrude       : 82
minkowski            : 62
multmatrix           : 85 86
offset               : 60
paths                : 95 96
points               : 95 96 97 98
polygon              : 95 96
polyhedron           : 97 98
projection           : 99
render               : 5
resize               : 63
rotate_extrude       : 80 81
sphere               : 89
square               : 93
subdiv               : 65
surface              : 84
text                 : 72 94
triangles            : 98
true                 : 8
undef                : 95
union                : 77

Nonterminals, with rules where they appear

2d_point             : 34 35 36 71
3d_point             : 38 39 40
anymodifier          : 23
block_list           : 2 4 5 6 60 61 62 63 64 65 77 78 79 80 82 85 99 0
boolean              : 67
circle_action        : 27
color_action         : 16
cube_action          : 26
cylinder_action      : 25
difference_action    : 47
group_action1        : 14
group_action2        : 15
hull_action          : 56
import_file1         : 53
intersection_action  : 48
keywordargument      : 74 75
keywordargument_list : 5 60 62 63 64 65 75 80 81 82 83 84 89 90 91 92 93 94 95 96 97 98 99
linear_extrude_with_transform : 51
matrix               : 85 86
minkowski_action     : 57
multmatrix_action    : 13
not_supported        : 18
offset_action        : 58
operation            : 12
part                 : 11
path_list            : 45 46
path_points          : 42 43 44
path_set             : 46 96 97
points_list_2d       : 35 36 95 96
points_list_3d       : 39 40 97 98 98
polygon_action_nopath : 30
polygon_action_plus_path : 31
polyhedron_action    : 32
projection_action    : 55
render_action        : 17
resize_action        : 59
rotate_extrude_action : 50
rotate_extrude_file  : 52
size_vector          : 69
sphere_action        : 24
square_action        : 28
statement            : 1 2 23 86
statementwithmod     : 3 4
stripped_string      : 72 73
surface_action       : 54
text_action          : 29
union_action         : 49
vector               : 70 76 87 87 87 87

Parsing method: LALR

state 0

    (0) S' -> . block_list
    (1) block_list -> . statement
    (2) block_list -> . block_list statement
    (3) block_list -> . statementwithmod
    (4) block_list -> . block_list statementwithmod
    (11) statement -> . part
    (12) statement -> . operation
    (13) statement -> . multmatrix_action
    (14) statement -> . group_action1
    (15) statement -> . group_action2
    (16) statement -> . color_action
    (17) statement -> . render_action
    (18) statement -> . not_supported
    (23) statementwithmod -> . anymodifier statement
    (24) part -> . sphere_action
    (25) part -> . cylinder_action
    (26) part -> . cube_action
    (27) part -> . circle_action
    (28) part -> . square_action
    (29) part -> . text_action
    (30) part -> . polygon_action_nopath
    (31) part -> . polygon_action_plus_path
    (32) part -> . polyhedron_action
    (47) operation -> . difference_action
    (48) operation -> . intersection_action
    (49) operation -> . union_action
    (50) operation -> . rotate_extrude_action
    (51) operation -> . linear_extrude_with_transform
    (52) operation -> . rotate_extrude_file
    (53) operation -> . import_file1
    (54) operation -> . surface_action
    (55) operation -> . projection_action
    (56) operation -> . hull_action
    (57) operation -> . minkowski_action
    (58) operation -> . offset_action
    (59) operation -> . resize_action
    (85) multmatrix_action -> . multmatrix LPAREN matrix RPAREN OBRACE block_list EBRACE
    (86) multmatrix_action -> . multmatrix LPAREN matrix RPAREN statement
    (6) group_action1 -> . group LPAREN RPAREN OBRACE block_list EBRACE
    (7) group_action2 -> . group LPAREN RPAREN SEMICOL
    (76) color_action -> . color LPAREN vector RPAREN
    (5) render_action -> . render LPAREN keywordargument_list RPAREN OBRACE block_list EBRACE
    (64) not_supported -> . glide LPAREN keywordargument_list RPAREN OBRACE block_list EBRACE
    (65) not_supported -> . subdiv LPAREN keywordargument_list RPAREN OBRACE block_list EBRACE
    (19) anymodifier -> . MODIFIERBACK
    (20) anymodifier -> . MODIFIERDEBUG
    (21) anymodifier -> . MODIFIERROOT
    (22) anymodifier -> . MODIFIERDISABLE
    (89) sphere_action -> . sphere LPAREN keywordargument_list RPAREN SEMICOL
    (90) cylinder_action -> . cylinder LPAREN keywordargument_list RPAREN SEMICOL
    (91) cube_action -> . cube LPAREN keywordargument_list RPAREN SEMICOL
    (92) circle_action -> . circle LPAREN keywordargument_list RPAREN SEMICOL
    (93) square_action -> . square LPAREN keywordargument_list RPAREN SEMICOL
    (94) text_action -> . text LPAREN keywordargument_list RPAREN SEMICOL
    (95) polygon_action_nopath -> . polygon LPAREN points EQ OSQUARE points_list_2d ESQUARE COMMA paths EQ undef COMMA keywordargument_list RPAREN SEMICOL
    (96) polygon_action_plus_path -> . polygon LPAREN points EQ OSQUARE points_list_2d ESQUARE COMMA paths EQ OSQUARE path_set ESQUARE COMMA keywordargument_list RPAREN SEMICOL
    (97) polyhedron_action -> . polyhedron LPAREN points EQ OSQUARE points_list_3d ESQUARE COMMA faces EQ OSQUARE path_set ESQUARE COMMA keywordargument_list RPAREN SEMICOL
    (98) polyhedron_action -> . polyhedron LPAREN points EQ OSQUARE points_list_3d ESQUARE COMMA triangles EQ OSQUARE points_list_3d ESQUARE COMMA keywordargument_list RPAREN SEMICOL
    (78) difference_action -> . difference LPAREN RPAREN OBRACE block_list EBRACE
    (79) intersection_action -> . intersection LPAREN RPAREN OBRACE block_list EBRACE
    (77) union_action -> . union LPAREN RPAREN OBRACE block_list EBRACE
    (80) rotate_extrude_action -> . rotate_extrude LPAREN keywordargument_list RPAREN OBRACE block_list EBRACE
    (82) linear_extrude_with_transform -> . linear_extrude LPAREN keywordargument_list RPAREN OBRACE block_list EBRACE
    (81) rotate_extrude_file -> . rotate_extrude LPAREN keywordargument_list RPAREN SEMICOL
    (83) import_file1 -> . import LPAREN keywordargument_list RPAREN SEMICOL
    (84) surface_action -> . surface LPAREN keywordargument_list RPAREN SEMICOL
    (99) projection_action -> . projection LPAREN keywordargument_list RPAREN OBRACE block_list EBRACE
    (61) hull_action -> . hull LPAREN RPAREN OBRACE block_list EBRACE
    (62) minkowski_action -> . minkowski LPAREN keywordargument_list RPAREN OBRACE block_list EBRACE
    (60) offset_action -> . offset LPAREN keywordargument_list RPAREN OBRACE block_list EBRACE
    (63) resize_action -> . resize LPAREN keywordargument_list RPAREN OBRACE block_list EBRACE

    multmatrix      shift and go to state 35
    group           shift and go to state 36
    color           shift and go to state 37
    render          shift and go to state 38
    glide           shift and go to state 39
    subdiv          shift and go to state 40
    MODIFIERBACK    shift and go to state 41
    MODIFIERDEBUG   shift and go to state 42
    MODIFIERROOT    shift and go to state 43
    MODIFIERDISABLE shift and go to state 44
    sphere          shift and go to state 45
    cylinder        shift and go to state 46
    cube            shift and go to state 47
    circle          shift and go to state 48
    square          shift and go to state 49
    text            shift and go to state 50
    polygon         shift and go to state 51
    polyhedron      shift and go to state 52
    difference      shift and go to state 53
    intersection    shift and go to state 54
    union           shift and go to state 55
    rotate_extrude  shift and go to state 56
    linear_extrude  shift and go to state 57
    import          shift and go to state 58
    surface         shift and go to state 59
    projection      shift and go to state 60
    hull            shift and go to state 61
    minkowski       shift and go to state 62
    offset          shift and go to state 63
    resize          shift and go to state 64

    block_list                     shift and go to state 1
    statement                      shift and go to state 2
    statementwithmod               shift and go to state 3
    part                           shift and go to state 4
    operation                      shift and go to state 5
    multmatrix_action              shift and go to state 6
    group_action1                  shift and go to state 7
    group_action2                  shift and go to state 8
    color_action                   shift and go to state 9
    render_action                  shift and go to state 10
    not_supported                  shift and go to state 11
    anymodifier                    shift and go to state 12
    sphere_action                  shift and go to state 13
    cylinder_action                shift and go to state 14
    cube_action                    shift and go to state 15
    circle_action                  shift and go to state 16
    square_action                  shift and go to state 17
    text_action                    shift and go to state 18
    polygon_action_nopath          shift and go to state 19
    polygon_action_plus_path       shift and go to state 20
    polyhedron_action              shift and go to state 21
    difference_action              shift and go to state 22
    intersection_action            shift and go to state 23
    union_action                   shift and go to state 24
    rotate_extrude_action          shift and go to state 25
    linear_extrude_with_transform  shift and go to state 26
    rotate_extrude_file            shift and go to state 27
    import_file1                   shift and go to state 28
    surface_action                 shift and go to state 29
    projection_action              shift and go to state 30
    hull_action                    shift and go to state 31
    minkowski_action               shift and go to state 32
    offset_action                  shift and go to state 33
    resize_action                  shift and go to state 34

state 1

    (0) S' -> block_list .
    (2) block_list -> block_list . statement
    (4) block_list -> block_list . statementwithmod
    (11) statement -> . part
    (12) statement -> . operation
    (13) statement -> . multmatrix_action
    (14) statement -> . group_action1
    (15) statement -> . group_action2
    (16) statement -> . color_action
    (17) statement -> . render_action
    (18) statement -> . not_supported
    (23) statementwithmod -> . anymodifier statement
    (24) part -> . sphere_action
    (25) part -> . cylinder_action
    (26) part -> . cube_action
    (27) part -> . circle_action
    (28) part -> . square_action
    (29) part -> . text_action
    (30) part -> . polygon_action_nopath
    (31) part -> . polygon_action_plus_path
    (32) part -> . polyhedron_action
    (47) operation -> . difference_action
    (48) operation -> . intersection_action
    (49) operation -> . union_action
    (50) operation -> . rotate_extrude_action
    (51) operation -> . linear_extrude_with_transform
    (52) operation -> . rotate_extrude_file
    (53) operation -> . import_file1
    (54) operation -> . surface_action
    (55) operation -> . projection_action
    (56) operation -> . hull_action
    (57) operation -> . minkowski_action
    (58) operation -> . offset_action
    (59) operation -> . resize_action
    (85) multmatrix_action -> . multmatrix LPAREN matrix RPAREN OBRACE block_list EBRACE
    (86) multmatrix_action -> . multmatrix LPAREN matrix RPAREN statement
    (6) group_action1 -> . group LPAREN RPAREN OBRACE block_list EBRACE
    (7) group_action2 -> . group LPAREN RPAREN SEMICOL
    (76) color_action -> . color LPAREN vector RPAREN
    (5) render_action -> . render LPAREN keywordargument_list RPAREN OBRACE block_list EBRACE
    (64) not_supported -> . glide LPAREN keywordargument_list RPAREN OBRACE block_list EBRACE
    (65) not_supported -> . subdiv LPAREN keywordargument_list RPAREN OBRACE block_list EBRACE
    (19) anymodifier -> . MODIFIERBACK
    (20) anymodifier -> . MODIFIERDEBUG
    (21) anymodifier -> . MODIFIERROOT
    (22) anymodifier -> . MODIFIERDISABLE
    (89) sphere_action -> . sphere LPAREN keywordargument_list RPAREN SEMICOL
    (90) cylinder_action -> . cylinder LPAREN keywordargument_list RPAREN SEMICOL
    (91) cube_action -> . cube LPAREN keywordargument_list RPAREN SEMICOL
    (92) circle_action -> . circle LPAREN keywordargument_list RPAREN SEMICOL
    (93) square_action -> . square LPAREN keywordargument_list RPAREN SEMICOL
    (94) text_action -> . text LPAREN keywordargument_list RPAREN SEMICOL
    (95) polygon_action_nopath -> . polygon LPAREN points EQ OSQUARE points_list_2d ESQUARE COMMA paths EQ undef COMMA keywordargument_list RPAREN SEMICOL
    (96) polygon_action_plus_path -> . polygon LPAREN points EQ OSQUARE points_list_2d ESQUARE COMMA paths EQ OSQUARE path_set ESQUARE COMMA keywordargument_list RPAREN SEMICOL
    (97) polyhedron_action -> . polyhedron LPAREN points EQ OSQUARE points_list_3d ESQUARE COMMA faces EQ OSQUARE path_set ESQUARE COMMA keywordargument_list RPAREN SEMICOL
    (98) polyhedron_action -> . polyhedron LPAREN points EQ OSQUARE points_list_3d ESQUARE COMMA triangles EQ OSQUARE points_list_3d ESQUARE COMMA keywordargument_list RPAREN SEMICOL
    (78) difference_action -> . difference LPAREN RPAREN OBRACE block_list EBRACE
    (79) intersection_action -> . intersection LPAREN RPAREN OBRACE block_list EBRACE
    (77) union_action -> . union LPAREN RPAREN OBRACE block_list EBRACE
    (80) rotate_extrude_action -> . rotate_extrude LPAREN keywordargument_list RPAREN OBRACE block_list EBRACE
    (82) linear_extrude_with_transform -> . linear_extrude LPAREN keywordargument_list RPAREN OBRACE block_list EBRACE
    (81) rotate_extrude_file -> . rotate_extrude LPAREN keywordargument_list RPAREN SEMICOL
    (83) import_file1 -> . import LPAREN keywordargument_list RPAREN SEMICOL
    (84) surface_action -> . surface LPAREN keywordargument_list RPAREN SEMICOL
    (99) projection_action -> . projection LPAREN keywordargument_list RPAREN OBRACE block_list EBRACE
    (61) hull_action -> . hull LPAREN RPAREN OBRACE block_list EBRACE
    (62) minkowski_action -> . minkowski LPAREN keywordargument_list RPAREN OBRACE block_list EBRACE
    (60) offset_action -> . offset LPAREN keywordargument_list RPAREN OBRACE block_list EBRACE
    (63) resize_action -> . resize LPAREN keywordargument_list RPAREN OBRACE block_list EBRACE

    multmatrix      shift and go to state 35
    group           shift and go to state 36
    color           shift and go to state 37
    render          shift and go to state 38
    glide           shift and go to state 39
    subdiv          shift and go to state 40
    MODIFIERBACK    shift and go to state 41
    MODIFIERDEBUG   shift and go to state 42
    MODIFIERROOT    shift and go to state 43
    MODIFIERDISABLE shift and go to state 44
    sphere          shift and go to state 45
    cylinder        shift and go to state 46
    cube            shift and go to state 47
    circle          shift and go to state 48
    square          shift and go to state 49
    text            shift and go to state 50
    polygon         shift and go to state 51
    polyhedron      shift and go to state 52
    difference      shift and go to state 53
    intersection    shift and go to state 54
    union           shift and go to state 55
    rotate_extrude  shift and go to state 56
    linear_extrude  shift and go to state 57
    import          shift and go to state 58
    surface         shift and go to state 59
    projection      shift and go to state 60
    hull            shift and go to state 61
    minkowski       shift and go to state 62
    offset          shift and go to state 63
    resize          shift and go to state 64

    statement                      shift and go to state 65
    statementwithmod               shift and go to state 66
    part                           shift and go to state 4
    operation                      shift and go to state 5
    multmatrix_action              shift and go to state 6
    group_action1                  shift and go to state 7
    group_action2                  shift and go to state 8
    color_action                   shift and go to state 9
    render_action                  shift and go to state 10
    not_supported                  shift and go to state 11
    anymodifier                    shift and go to state 12
    sphere_action                  shift and go to state 13
    cylinder_action                shift and go to state 14
    cube_action                    shift and go to state 15
    circle_action                  shift and go to state 16
    square_action                  shift and go to state 17
    text_action                    shift and go to state 18
    polygon_action_nopath          shift and go to state 19
    polygon_action_plus_path       shift and go to state 20
    polyhedron_action              shift and go to state 21
    difference_action              shift and go to state 22
    intersection_action            shift and go to state 23
    union_action                   shift and go to state 24
    rotate_extrude_action          shift and go to state 25
    linear_extrude_with_transform  shift and go to state 26
    rotate_extrude_file            shift and go to state 27
    import_file1                   shift and go to state 28
    surface_action                 shift and go to state 29
    projection_action              shift and go to state 30
    hull_action                    shift and go to state 31
    minkowski_action               shift and go to state 32
    offset_action                  shift and go to state 33
    resize_action                  shift and go to state 34

state 2

    (1) block_list -> statement .

    multmatrix      reduce using rule 1 (block_list -> statement .)
    group           reduce using rule 1 (block_list -> statement .)
    color           reduce using rule 1 (block_list -> statement .)
    render          reduce using rule 1 (block_list -> statement .)
    glide           reduce using rule 1 (block_list -> statement .)
    subdiv          reduce using rule 1 (block_list -> statement .)
    MODIFIERBACK    reduce using rule 1 (block_list -> statement .)
    MODIFIERDEBUG   reduce using rule 1 (block_list -> statement .)
    MODIFIERROOT    reduce using rule 1 (block_list -> statement .)
    MODIFIERDISABLE reduce using rule 1 (block_list -> statement .)
    sphere          reduce using rule 1 (block_list -> statement .)
    cylinder        reduce using rule 1 (block_list -> statement .)
    cube            reduce using rule 1 (block_list -> statement .)
    circle          reduce using rule 1 (block_list -> statement .)
    square          reduce using rule 1 (block_list -> statement .)
    text            reduce using rule 1 (block_list -> statement .)
    polygon         reduce using rule 1 (block_list -> statement .)
    polyhedron      reduce using rule 1 (block_list -> statement .)
    difference      reduce using rule 1 (block_list -> statement .)
    intersection    reduce using rule 1 (block_list -> statement .)
    union           reduce using rule 1 (block_list -> statement .)
    rotate_extrude  reduce using rule 1 (block_list -> statement .)
    linear_extrude  reduce using rule 1 (block_list -> statement .)
    import          reduce using rule 1 (block_list -> statement .)
    surface         reduce using rule 1 (block_list -> statement .)
    projection      reduce using rule 1 (block_list -> statement .)
    hull            reduce using rule 1 (block_list -> statement .)
    minkowski       reduce using rule 1 (block_list -> statement .)
    offset          reduce using rule 1 (block_list -> statement .)
    resize          reduce using rule 1 (block_list -> statement .)
    $end            reduce using rule 1 (block_list -> statement .)
    EBRACE          reduce using rule 1 (block_list -> statement .)


state 3

    (3) block_list -> statementwithmod .

    multmatrix      reduce using rule 3 (block_list -> statementwithmod .)
    group           reduce using rule 3 (block_list -> statementwithmod .)
    color           reduce using rule 3 (block_list -> statementwithmod .)
    render          reduce using rule 3 (block_list -> statementwithmod .)
    glide           reduce using rule 3 (block_list -> statementwithmod .)
    subdiv          reduce using rule 3 (block_list -> statementwithmod .)
    MODIFIERBACK    reduce using rule 3 (block_list -> statementwithmod .)
    MODIFIERDEBUG   reduce using rule 3 (block_list -> statementwithmod .)
    MODIFIERROOT    reduce using rule 3 (block_list -> statementwithmod .)
    MODIFIERDISABLE reduce using rule 3 (block_list -> statementwithmod .)
    sphere          reduce using rule 3 (block_list -> statementwithmod .)
    cylinder        reduce using rule 3 (block_list -> statementwithmod .)
    cube            reduce using rule 3 (block_list -> statementwithmod .)
    circle          reduce using rule 3 (block_list -> statementwithmod .)
    square          reduce using rule 3 (block_list -> statementwithmod .)
    text            reduce using rule 3 (block_list -> statementwithmod .)
    polygon         reduce using rule 3 (block_list -> statementwithmod .)
    polyhedron      reduce using rule 3 (block_list -> statementwithmod .)
    difference      reduce using rule 3 (block_list -> statementwithmod .)
    intersection    reduce using rule 3 (block_list -> statementwithmod .)
    union           reduce using rule 3 (block_list -> statementwithmod .)
    rotate_extrude  reduce using rule 3 (block_list -> statementwithmod .)
    linear_extrude  reduce using rule 3 (block_list -> statementwithmod .)
    import          reduce using rule 3 (block_list -> statementwithmod .)
    surface         reduce using rule 3 (block_list -> statementwithmod .)
    projection      reduce using rule 3 (block_list -> statementwithmod .)
    hull            reduce using rule 3 (block_list -> statementwithmod .)
    minkowski       reduce using rule 3 (block_list -> statementwithmod .)
    offset          reduce using rule 3 (block_list -> statementwithmod .)
    resize          reduce using rule 3 (block_list -> statementwithmod .)
    $end            reduce using rule 3 (block_list -> statementwithmod .)
    EBRACE          reduce using rule 3 (block_list -> statementwithmod .)


state 4

    (11) statement -> part .

    multmatrix      reduce using rule 11 (statement -> part .)
    group           reduce using rule 11 (statement -> part .)
    color           reduce using rule 11 (statement -> part .)
    render          reduce using rule 11 (statement -> part .)
    glide           reduce using rule 11 (statement -> part .)
    subdiv          reduce using rule 11 (statement -> part .)
    MODIFIERBACK    reduce using rule 11 (statement -> part .)
    MODIFIERDEBUG   reduce using rule 11 (statement -> part .)
    MODIFIERROOT    reduce using rule 11 (statement -> part .)
    MODIFIERDISABLE reduce using rule 11 (statement -> part .)
    sphere          reduce using rule 11 (statement -> part .)
    cylinder        reduce using rule 11 (statement -> part .)
    cube            reduce using rule 11 (statement -> part .)
    circle          reduce using rule 11 (statement -> part .)
    square          reduce using rule 11 (statement -> part .)
    text            reduce using rule 11 (statement -> part .)
    polygon         reduce using rule 11 (statement -> part .)
    polyhedron      reduce using rule 11 (statement -> part .)
    difference      reduce using rule 11 (statement -> part .)
    intersection    reduce using rule 11 (statement -> part .)
    union           reduce using rule 11 (statement -> part .)
    rotate_extrude  reduce using rule 11 (statement -> part .)
    linear_extrude  reduce using rule 11 (statement -> part .)
    import          reduce using rule 11 (statement -> part .)
    surface         reduce using rule 11 (statement -> part .)
    projection      reduce using rule 11 (statement -> part .)
    hull            reduce using rule 11 (statement -> part .)
    minkowski       reduce using rule 11 (statement -> part .)
    offset          reduce using rule 11 (statement -> part .)
    resize          reduce using rule 11 (statement -> part .)
    $end            reduce using rule 11 (statement -> part .)
    EBRACE          reduce using rule 11 (statement -> part .)


state 5

    (12) statement -> operation .

    multmatrix      reduce using rule 12 (statement -> operation .)
    group           reduce using rule 12 (statement -> operation .)
    color           reduce using rule 12 (statement -> operation .)
    render          reduce using rule 12 (statement -> operation .)
    glide           reduce using rule 12 (statement -> operation .)
    subdiv          reduce using rule 12 (statement -> operation .)
    MODIFIERBACK    reduce using rule 12 (statement -> operation .)
    MODIFIERDEBUG   reduce using rule 12 (statement -> operation .)
    MODIFIERROOT    reduce using rule 12 (statement -> operation .)
    MODIFIERDISABLE reduce using rule 12 (statement -> operation .)
    sphere          reduce using rule 12 (statement -> operation .)
    cylinder        reduce using rule 12 (statement -> operation .)
    cube            reduce using rule 12 (statement -> operation .)
    circle          reduce using rule 12 (statement -> operation .)
    square          reduce using rule 12 (statement -> operation .)
    text            reduce using rule 12 (statement -> operation .)
    polygon         reduce using rule 12 (statement -> operation .)
    polyhedron      reduce using rule 12 (statement -> operation .)
    difference      reduce using rule 12 (statement -> operation .)
    intersection    reduce using rule 12 (statement -> operation .)
    union           reduce using rule 12 (statement -> operation .)
    rotate_extrude  reduce using rule 12 (statement -> operation .)
    linear_extrude  reduce using rule 12 (statement -> operation .)
    import          reduce using rule 12 (statement -> operation .)
    surface         reduce using rule 12 (statement -> operation .)
    projection      reduce using rule 12 (statement -> operation .)
    hull            reduce using rule 12 (statement -> operation .)
    minkowski       reduce using rule 12 (statement -> operation .)
    offset          reduce using rule 12 (statement -> operation .)
    resize          reduce using rule 12 (statement -> operation .)
    $end            reduce using rule 12 (statement -> operation .)
    EBRACE          reduce using rule 12 (statement -> operation .)


state 6

    (13) statement -> multmatrix_action .

    multmatrix      reduce using rule 13 (statement -> multmatrix_action .)
    group           reduce using rule 13 (statement -> multmatrix_action .)
    color           reduce using rule 13 (statement -> multmatrix_action .)
    render          reduce using rule 13 (statement -> multmatrix_action .)
    glide           reduce using rule 13 (statement -> multmatrix_action .)
    subdiv          reduce using rule 13 (statement -> multmatrix_action .)
    MODIFIERBACK    reduce using rule 13 (statement -> multmatrix_action .)
    MODIFIERDEBUG   reduce using rule 13 (statement -> multmatrix_action .)
    MODIFIERROOT    reduce using rule 13 (statement -> multmatrix_action .)
    MODIFIERDISABLE reduce using rule 13 (statement -> multmatrix_action .)
    sphere          reduce using rule 13 (statement -> multmatrix_action .)
    cylinder        reduce using rule 13 (statement -> multmatrix_action .)
    cube            reduce using rule 13 (statement -> multmatrix_action .)
    circle          reduce using rule 13 (statement -> multmatrix_action .)
    square          reduce using rule 13 (statement -> multmatrix_action .)
    text            reduce using rule 13 (statement -> multmatrix_action .)
    polygon         reduce using rule 13 (statement -> multmatrix_action .)
    polyhedron      reduce using rule 13 (statement -> multmatrix_action .)
    difference      reduce using rule 13 (statement -> multmatrix_action .)
    intersection    reduce using rule 13 (statement -> multmatrix_action .)
    union           reduce using rule 13 (statement -> multmatrix_action .)
    rotate_extrude  reduce using rule 13 (statement -> multmatrix_action .)
    linear_extrude  reduce using rule 13 (statement -> multmatrix_action .)
    import          reduce using rule 13 (statement -> multmatrix_action .)
    surface         reduce using rule 13 (statement -> multmatrix_action .)
    projection      reduce using rule 13 (statement -> multmatrix_action .)
    hull            reduce using rule 13 (statement -> multmatrix_action .)
    minkowski       reduce using rule 13 (statement -> multmatrix_action .)
    offset          reduce using rule 13 (statement -> multmatrix_action .)
    resize          reduce using rule 13 (statement -> multmatrix_action .)
    $end            reduce using rule 13 (statement -> multmatrix_action .)
    EBRACE          reduce using rule 13 (statement -> multmatrix_action .)


state 7

    (14) statement -> group_action1 .
